Fix missing space between some items

--- a/src/SSRv1/static/main.css
+++ b/src/SSRv1/static/main.css
@@ -173,7 +173,7 @@ tr.rootitem {
 	background: #eee;
 }
 
-.item + .item {
+.item:not(:first-child) {
 	margin-top: 2em;
 }
 
